Fixes MDL-11676, Skip block links are broken in Internet Explorer 6. Merged.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -678,7 +678,7 @@ body#admin-roles-manage table.generalbox {
  *** Blocks
  ***/
 
-/*Accessibility: Skip block link, for screen reader users. */
+/*Accessibility: Skip block link, for keyboard-only users. */
 a.skip-block, .skip-block {
   display:block;
   width:2em;
@@ -688,7 +688,8 @@ a.skip-block, .skip-block {
   height:4px;
 }
 .skip-block-to {
-  font-size:1px;
+  display: block;
+  height: 1px;
 }
 
 .sideblock li .icon img {
